# fa

./: Cargo.toml  LICENSE.md  README.md
.github/: dependabot.yml
.github/workflows/: release.yml
mock/export/: sample_export.csv
mock/import/: sample_data.csv
src/: cli.rs  config.rs  error.rs  fa.rs  gpg.rs  main.rs  store.rs  utils.rs
