[package]
name = "fa"
version = "0.0.1"
edition = "2021"
authors = ["Ayush Gupta <work@isitayush.dev>"]
description = "'Fa' is a very simple terminal password manager."
readme = "README.md"
repository = "https://github.com/is-it-ayush/fa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
dialoguer = "0.11.0"
path-absolutize = "3.1.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.8"
