[package]
name = "fa"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Ayush Gupta <work@isitayush.dev>"]
description = "A password manager that lives in your terminal."
readme = "README.md"
repository = "https://github.com/is-it-ayush/fa"
categories = ["command-line-utilities"]
keywords = ["cli", "password-manager", "tool"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.17", features = ["derive", "cargo"] }
console = "0.15.7"
dialoguer = "0.11.0"
path-absolutize = "3.1.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.51"
toml = "0.8.8"
csv = "1.3.0"
